--- a/index.html
+++ b/index.html
@@ -70,7 +70,12 @@
                 </b>
             </p>
 
-            <h4>Early Follicles and the Missing Century</h4>
+            <h4>
+                <strong>
+                    Early Follicles and the Missing Century
+                </strong>
+            </h4>
+
 
            
         </div>
