--- a/index.html
+++ b/index.html
@@ -76,7 +76,24 @@
                 </strong>
             </h4>
 
+            <p>
+                <b>
+                    Our first subject is the 1ˢᵗ Follicle Century, dubbed the Missing Century due to the absence of records from this time. Thanks to the Works of unknown
+                    authors in the 2ⁿᵈ and 3ʳᵈ Centuries, we know quite a bit about how life worked in the Missing Century. According to these Texts, the 10 Follicle Families
+                    divided the Follicle Fjords between them so that each of them would have ample room to grow crops, develop, and do other things. These divisions developed
+                    into the 10 Historic Regions of the Follicle Fjords, many of which Still contain a majority Tribe.
+                </b>
+            </p>
 
+            <p>
+                <b>
+                    Early Follicle society was mainly Agrarian and Isolationist. Many Follicles did not venture out into the world since the First Follicles — the Wisest and most
+                    Respected Follicles — looked over the Whole World and chose the Follicle Fjords as their Home. They wouldn't Dare go against the Decisions of their Forefathers.
+                    This stationary attitude allowed the Follicles to perfect their Powers. Archaeological evidence suggests that these early Follicles used Glyphs to channel
+                    their Powers. Whether these were transciprions of their language or purely Magical is still up for debate. If these Glyphs do represent a Language, they would be
+                    our Only Records of Proto-Folliccanese, the language of the 1ˢᵗ Century.
+                </b>
+            </p>
            
         </div>
 
