--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             Follicle News
         </h2>
 
-        <div class="column" >
+        <div class="column" style="padding: 30px">
 
             
            
