--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
     <link rel="stylesheet" href="https://blended-mann.github.io/posts-id-3/StyleSheet.css" />
     <style>
         h4 {
+            text-align: left;
             font-size: xx-large;
         }
+
+        p {
+            text-align: justify;
+        }
+
     </style>
 </head>
     <body>
