--- a/index.html
+++ b/index.html
@@ -113,7 +113,16 @@
                     Coming into the 2ⁿᵈ Century, a Cultural Shift occurs causing a Desire to Explore and Settle New lands. Over the span of around 30 years, Follicles Spread out
                     along the Pink Coast. Unlike later Migrations, Tribes seemed to have Migrated in Equal numbers, resulting in Diverse settlements along the Pink Coast. Fear
                     of What Lay in the coastal Forests prevented most Follicles from venturing Inland, as that would require Passing through Them. However, some Did establish
-                    Settlements in the Inland Prairies, notably those from the 1ˢᵗ and 8ᵗʰ
+                    Settlements in the Inland Prairies, notably those from the 1ˢᵗ and 8ᵗʰ Follicle Tribes, whose families had been Known for their Bravery and Recklessness.
+                </strong>
+            </p>
+
+            <p>
+                <strong>
+                    With Settlements being established Up and Down the Coast, Trade was inevitable. Trade networks along the Pink Coast were Bustling by 216, though trad was
+                    established Much Earlier, perhaps as early as 206. Trade to the inland settlements was much Sparser due to the Fear of the Forests. With trade came a
+                    need to keep Track of Trade: Writing. The earliest Writings come from around 210, most of which were Logs of Products coming in and out the Pink Bay,
+                    one of the most Populous Pink Coast settlements of the time.
                 </strong>
             </p>
            
