--- a/index.html
+++ b/index.html
@@ -125,6 +125,13 @@
                     one of the most Populous Pink Coast settlements of the time.
                 </strong>
             </p>
+            <p>
+                <strong>
+                    Around 246, one of the most famous Written Works was created: the Follicle Saga. In its full form, it would have Detailed the Creation of the World
+                    and the actions of the different Follicle Tribes. Sadly, most of this saga has been Lost to Time, but a few parts Survive, notably the Creation of the World and
+                    the Story of the First Follicles.
+                </strong>
+            </p>
            
         </div>
 
