--- a/index.html
+++ b/index.html
@@ -133,7 +133,26 @@
                     the Story of the First Follicles.
                 </strong>
             </p>
+
+            <h4>
+                <strong>
+                    The Rise of Cities
+                </strong>
+            </h4>
            
+            <p>
+                <b>
+                    An Increase in writing occured in the 3ʳᵈ Century with the establishment of Political Entites and Governments. Most Polities (political entities)
+                    were city-states, but Some, such as the settlement at Pink Bay, expanded Beyond their walls and Influenced a (relatively) Large area. Pink Bay was able to
+                    do this due to the Large Sums of Money trade brought them. Despite being the Folliccanese Homeland, the Follicle Fjords actually had Less Influence than
+                    Pink Bay. Nevertheless, it was still a Valued Homeland for the Pink Coast Follicles. This era also saw the Rise of Regional identities along the Pink
+                    Coast and in the Inland Praries. This coincided with the devleopment of many Distinct Dialects of Pre-Classical Folliccanese — the Language of the 2ⁿᵈ
+                    and 3ʳᵈ Centuries — in these regions. Trends in the few written records we Do have suggest that the Pink Bay Dialect was the standard in literary tradition
+                    and governance.
+
+                </b>
+            </p>
+
         </div>
 
         
