--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
            
             <h3>
                 <strong>
-                        Follicle Chronicles #1
+                        Follicle Chronicles #2
                 </strong>
             </h3>
 
@@ -120,7 +120,7 @@
 
             <p>
                 <strong>
-                    With Settlements being established Up and Down the Coast, Trade was inevitable. Trade networks along the Pink Coast were Bustling by 216, though trad was
+                    With Settlements being established Up and Down the Coast, Trade was inevitable. Trade networks along the Pink Coast were Bustling by 216, though trade was
                     established Much Earlier, perhaps as early as 206. Trade to the inland settlements was much Sparser due to the Fear of the Forests. With trade came a
                     need to keep Track of Trade: Writing. The earliest Writings come from around 210, most of which were Logs of Products coming in and out the Pink Bay,
                     one of the most Populous Pink Coast settlements of the time.
@@ -149,7 +149,6 @@
                     Coast and in the Inland Praries. This coincided with the devleopment of many Distinct Dialects of Pre-Classical Folliccanese — the Language of the 2ⁿᵈ
                     and 3ʳᵈ Centuries — in these regions. Trends in the few written records we Do have suggest that the Pink Bay Dialect was the standard in literary tradition
                     and governance.
-
                 </b>
             </p>
 
