--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
             margin: 5px;
         }
 
+        h5 {
+            text-align: left;
+            font-size: x-large;
+            margin: 5px;
+        }
+
         p {
             text-align: justify;
             text-indent: 0.5in;
@@ -152,9 +158,19 @@
                 </b>
             </p>
 
-        </div>
+            <h4>
+                <strong>
+                    Language
+                </strong>
+            </h4>
 
-        
+            <h5>
+                <strong>
+                    Where it Came From
+                </strong>
+            </h5>
+
+        </div>
 
 </body>
 </html>
