--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
         h5 {
             text-align: left;
-            font-size: x-large;
-            margin: 5px;
+            font-size: 20pt;
+            margin: 10px 5px 0px 5px;
         }
 
         p {
