--- a/index.html
+++ b/index.html
@@ -170,7 +170,19 @@
 
             <p>
                 <b>
+                    Pre-Classical Folliccanese evolved out of Proto-Folliccanese. We have barely any idea as to what Proto-Folliccanese was like. All we know is that it had an
+                    SOV word order, two grammatical genders (animate and inanimate), had no noun cases, and was head-final. there is one piece of evidence — the Follicle Saga — that
+                    suggests that nasal consonants could take the place of vowels. Notably, the name Nãmnʳ appears in it, where nʳ — a rhinal trill — acts as a vowel. Proto-Folliccanese
+                    also evolved extremely quickly into Pre-Classical Foliccanese by linguistic standards, only taking 100 years to do so. No one knows how this happenned, but there
+                    is a fringe theory that states that Proto-Folliccanese was never spoken, and instead Pre-Classical Folliccanese was designed by the First Follicles. However, only
+                    the most insane of insane believe this theory.
+                </b>
+            </p>
 
+            <p>
+                <b>
+                    Our small bu sizeable corpus of material has allowed us to get an idea of what Pre-Classical Folliccanese was like. It also helps that the Prairie Languages diverged
+                    from the rest of the Folliccanese languages in the 3ʳᵈ Century. This means that comparative analysis can be used to fill in the gaps.
                 </b>
             </p>
 
