--- a/index.html
+++ b/index.html
@@ -182,7 +182,8 @@
             <p>
                 <b>
                     Our small bu sizeable corpus of material has allowed us to get an idea of what Pre-Classical Folliccanese was like. It also helps that the Prairie Languages diverged
-                    from the rest of the Folliccanese languages in the 3ʳᵈ Century. This means that comparative analysis can be used to fill in the gaps.
+                    from the rest of the Folliccanese languages in the 3ʳᵈ Century. This means that comparative analysis (comparing languages' grammar and vocabulary to see
+                    how they're related) can be used to fill in the gaps.
                 </b>
             </p>
 
