--- a/index.html
+++ b/index.html
@@ -187,6 +187,17 @@
                 </b>
             </p>
 
+            <h5>
+                Phonology and Phonotactics
+            </h5>
+            
+            <p>
+                <b>
+                    Pre-Classical Folliccanese had a farily simple consonant inventory that consisted of only voiceless stops and fricatives, as well as nasals and a rhinal trill, a
+                    sound produced when a follicle blows air through their nose in such a way that it flaps up and down.
+                </b>
+            </p>
+
         </div>
 
 </body>
