--- a/index.html
+++ b/index.html
@@ -198,6 +198,25 @@
                 </b>
             </p>
 
+            <table>
+                <tr>
+                    <th></th>
+                    <th>bilabial</th>
+                    <th>alveolar</th>
+                    <th>velar</th>
+                    <th>glottal</th>
+                    <th>rhinal</th>
+                </tr>
+                <tr>
+                    <td>plosive</td>
+                    <td>p</td>
+                    <td>t</td>
+                    <td>k</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </table>
+
         </div>
 
 </body>
