--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                     <th>rhinal</th>
                 </tr>
                 <tr>
-                    <td>plosive</td>
+                    <th>plosive</th>
                     <td>p</td>
                     <td>t</td>
                     <td>k</td>
