--- a/index.html
+++ b/index.html
@@ -200,6 +200,9 @@
 
             <table>
                 <tr>
+                    <th colspan="6">Consonants</th>
+                </tr>
+                <tr>
                     <th></th>
                     <th>bilabial</th>
                     <th>alveolar</th>
