--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
            
             <p>
                 <b>
-                    An Increase in writing occured in the 3ʳᵈ Century with the establishment of Political Entites and Governments. Most Polities (political entities)
+                    An Increase in writing occured in the 3ʳᵈ Century with the establishment of Political Entities and Governments. Most Polities (political entities)
                     were city-states, but Some, such as the settlement at Pink Bay, expanded Beyond their walls and Influenced a (relatively) Large area. Pink Bay was able to
                     do this due to the Large Sums of Money trade brought them. Despite being the Folliccanese Homeland, the Follicle Fjords actually had Less Influence than
                     Pink Bay. Nevertheless, it was still a Valued Homeland for the Pink Coast Follicles. This era also saw the Rise of Regional identities along the Pink
-                    Coast and in the Inland Praries. This coincided with the devleopment of many Distinct Dialects of Pre-Classical Folliccanese — the Language of the 2ⁿᵈ
+                    Coast and in the Inland Praries. This coincided with the development of many Distinct Dialects of Pre-Classical Folliccanese — the Language of the 2ⁿᵈ
                     and 3ʳᵈ Centuries — in these regions. Trends in the few written records we Do have suggest that the Pink Bay Dialect was the standard in literary tradition
                     and governance.
                 </b>
@@ -193,7 +193,7 @@
             
             <p>
                 <b>
-                    Pre-Classical Folliccanese had a farily simple consonant inventory that consisted of only voiceless stops and fricatives, as well as nasals and a rhinal trill, a
+                    Pre-Classical Folliccanese had a fairly simple consonant inventory that consisted of only voiceless stops and fricatives, as well as nasals and a rhinal trill, a
                     sound produced when a follicle blows air through their nose in such a way that it flaps up and down.
                 </b>
             </p>
