--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
             text-indent: 0.5in;
         }
 
+        table {
+            margin-inline: auto;
+            width: 75%;
+        }
+
+        table, th, td {
+            border: 2px, solid rgb(185, 75, 75);
+            border-collapse: collapse;
+            font-size: 17pt;
+        }
+
     </style>
 </head>
     <body>
@@ -152,7 +163,7 @@
                     were city-states, but Some, such as the settlement at Pink Bay, expanded Beyond their walls and Influenced a (relatively) Large area. Pink Bay was able to
                     do this due to the Large Sums of Money trade brought them. Despite being the Folliccanese Homeland, the Follicle Fjords actually had Less Influence than
                     Pink Bay. Nevertheless, it was still a Valued Homeland for the Pink Coast Follicles. This era also saw the Rise of Regional identities along the Pink
-                    Coast and in the Inland Praries. This coincided with the development of many Distinct Dialects of Pre-Classical Folliccanese — the Language of the 2ⁿᵈ
+                    Coast and in the Inland Prairies. This coincided with the development of many Distinct Dialects of Pre-Classical Folliccanese — the Language of the 2ⁿᵈ
                     and 3ʳᵈ Centuries — in these regions. Trends in the few written records we Do have suggest that the Pink Bay Dialect was the standard in literary tradition
                     and governance.
                 </b>
@@ -173,7 +184,7 @@
                     Pre-Classical Folliccanese evolved out of Proto-Folliccanese. We have barely any idea as to what Proto-Folliccanese was like. All we know is that it had an
                     SOV word order, two grammatical genders (animate and inanimate), had no noun cases, and was head-final. there is one piece of evidence — the Follicle Saga — that
                     suggests that nasal consonants could take the place of vowels. Notably, the name Nãmnʳ appears in it, where nʳ — a rhinal trill — acts as a vowel. Proto-Folliccanese
-                    also evolved extremely quickly into Pre-Classical Foliccanese by linguistic standards, only taking 100 years to do so. No one knows how this happenned, but there
+                    also evolved extremely quickly into Pre-Classical Folliccanese by linguistic standards, only taking 100 years to do so. No one knows how this happened, but there
                     is a fringe theory that states that Proto-Folliccanese was never spoken, and instead Pre-Classical Folliccanese was designed by the First Follicles. However, only
                     the most insane of insane believe this theory.
                 </b>
