--- a/index.html
+++ b/index.html
@@ -34,9 +34,17 @@
         }
 
         table, th, td {
-            border: 2px, solid rgb(185, 75, 75);
+            border: 4px, solid rgb(185, 75, 75);
             border-collapse: collapse;
             font-size: 17pt;
+        }
+
+        th {
+            background-color: bisque;
+        }
+
+        td {
+            background-color: blanchedalmond;
         }
 
     </style>
@@ -211,7 +219,7 @@
 
             <table>
                 <tr>
-                    <th colspan="6">Consonants</th>
+                    <th colspan="6" style="border-radius: 6px;">Consonants</th>
                 </tr>
                 <tr>
                     <th></th>
