--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
         table {
             margin-inline: auto;
             width: 75%;
+            border-radius: 6px;
         }
 
         table, th, td {
             border: 4px, solid rgb(185, 75, 75);
-            border-collapse: collapse;
+            border-collapse: separate;
             font-size: 17pt;
         }
 
@@ -219,7 +220,7 @@
 
             <table>
                 <tr>
-                    <th colspan="6" style="border-radius: 6px;">Consonants</th>
+                    <th colspan="6">Consonants</th>
                 </tr>
                 <tr>
                     <th></th>
