--- a/index.html
+++ b/index.html
@@ -32,10 +32,12 @@
             margin-inline: auto;
             width: 75%;
             border-radius: 6px;
+            border: 4px, solid rgb(185, 75, 75);
         }
 
-        table, th, td {
-            border: 4px, solid rgb(185, 75, 75);
+        th, td {
+            border-left: 4px, solid rgb(185, 75, 75);
+            border-top: 4px, solid rgb(185, 75, 75);
             border-collapse: separate;
             font-size: 17pt;
         }
