--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
         th, td {
             border-left: 4px, solid rgb(185, 75, 75);
             border-top: 4px, solid rgb(185, 75, 75);
-            
             font-size: 17pt;
         }
 
@@ -171,7 +170,7 @@
            
             <p>
                 <b>
-                    An Increase in writing occured in the 3ʳᵈ Century with the establishment of Political Entities and Governments. Most Polities (political entities)
+                    An Increase in writing occurred in the 3ʳᵈ Century with the establishment of Political Entities and Governments. Most Polities (political entities)
                     were city-states, but Some, such as the settlement at Pink Bay, expanded Beyond their walls and Influenced a (relatively) Large area. Pink Bay was able to
                     do this due to the Large Sums of Money trade brought them. Despite being the Folliccanese Homeland, the Follicle Fjords actually had Less Influence than
                     Pink Bay. Nevertheless, it was still a Valued Homeland for the Pink Coast Follicles. This era also saw the Rise of Regional identities along the Pink
