--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         }
 
         table, th, td {
-            border: 4px, solid rgb(185, 75, 75);
+            border: 3px, solid rgb(185, 75, 75);
             font-size: 17pt;
             border-collapse: collapse;
         }
@@ -270,6 +270,12 @@
                     <td></td>
                 </tr>
             </table>
+
+            <p>
+                <b>
+                    Allophonic variation with these consonants' voiced counterparts probably existed, but it is unknown in what environments these allophones occurred.
+                </b>
+            </p>
 
         </div>
 
