--- a/index.html
+++ b/index.html
@@ -273,9 +273,14 @@
 
             <p>
                 <b>
-                    Allophonic variation with these consonants' voiced counterparts probably existed, but it is unknown in what environments these allophones occurred.
+                    Allophonic variation with these consonants' voiced counterparts probably existed, but it is unknown in what environments these allophones occurred. In all
+                    likely-hood, the voiced counterparts probably occurred between vowels (this might have even occurred between words; it is likely that Pre-Classical Folliccanese
+                    had no hard attack, since many of the Prairie Languages never developed it). If that is the case, it would be more accurate that the voiceless consonants were
+                    allophones of the voiced consonants.
                 </b>
             </p>
+
+
 
         </div>
 
