--- a/index.html
+++ b/index.html
@@ -213,7 +213,8 @@
             <p>
                 <b>
                     Pre-Classical Folliccanese had a fairly simple consonant inventory that consisted of only voiceless stops and fricatives, as well as nasals and a rhinal trill, a
-                    sound produced when a follicle blows air through their nose in such a way that it flaps up and down.
+                    sound produced when a follicle blows air through their nose in such a way that it flaps up and down. Note that all characters in parentheses are used to represent
+                    that sound in the romanization system used here but not in the IPA.
                 </b>
             </p>
 
@@ -259,14 +260,11 @@
                     <td></td>
                     <td></td>
                     <td></td>
-                    <td>nʳ</td>
+                    <td>(r)</td>
                 </tr>
                 <tr>
                     <th>semivowel</th>
-                    <td>w</td>
-                    <td></td>
-                    <td>(w)</td>
-                    <td></td>
+                    <td colspan="4">w</td>
                     <td></td>
                 </tr>
             </table>
@@ -276,11 +274,89 @@
                     Allophonic variation with these consonants' voiced counterparts probably existed, but it is unknown in what environments these allophones occurred. In all
                     likely-hood, the voiced counterparts probably occurred between vowels (this might have even occurred between words; it is likely that Pre-Classical Folliccanese
                     had no hard attack, since many of the Prairie Languages never developed it). If that is the case, it would be more accurate that the voiceless consonants were
-                    allophones of the voiced consonants.
+                    allophones of the voiced consonants. 
                 </b>
             </p>
 
+            <p>
+                <b>
+                    In contrast, to the language's consonant inventory, its vowel inventory was quite complex. There were three series of vowels: neutral, nasal, and screamed. The main
+                    distinction from neutral and screamed vowels is that screamed vowels were produced in the "head voice", giving them a different quality compared to the neutral vowels.
+                    They get their name from how they are used in casual conversation, where they were produced at a higher volume. However, if follicles needed to talk quietly, they would
+                    change the color of the vowels but not the vowels' volumes. Not all vowels could be nasal or screamed, only certain vowels could.
+                </b>
+            </p>
 
+            <table style="border: none;">
+                <tr>
+                    <table style="width: 30%">
+                        <tr>
+                            <th colspan="4">Neutral Vowels</th>
+                        </tr>
+                        <tr>
+                            <th></th>
+                            <th>front</th>
+                            <th>central</th>
+                            <th>back</th>
+                        </tr>
+                        <tr>
+                            <th>close</th>
+                            <td colspan="2">i y</td>
+                            <td>u</td>
+                        </tr>
+                        <tr>
+                            <th>open</th>
+                            <td>æ</td>
+                            <td></td>
+                            <td>ɒ ɑ</td>
+                        </tr>
+                    </table>
+                    <table style="width: 30%">
+                        <tr>
+                            <th colspan="4">Neutral Vowels</th>
+                        </tr>
+                        <tr>
+                            <th></th>
+                            <th>front</th>
+                            <th>central</th>
+                            <th>back</th>
+                        </tr>
+                        <tr>
+                            <th>close</th>
+                            <td colspan="2">i y</td>
+                            <td>u</td>
+                        </tr>
+                        <tr>
+                            <th>open</th>
+                            <td>æ</td>
+                            <td></td>
+                            <td>ɒ ɑ</td>
+                        </tr>
+                    </table>
+                    <table style="width: 30%">
+                        <tr>
+                            <th colspan="4">Neutral Vowels</th>
+                        </tr>
+                        <tr>
+                            <th></th>
+                            <th>front</th>
+                            <th>central</th>
+                            <th>back</th>
+                        </tr>
+                        <tr>
+                            <th>close</th>
+                            <td colspan="2">i y</td>
+                            <td>u</td>
+                        </tr>
+                        <tr>
+                            <th>open</th>
+                            <td>æ</td>
+                            <td></td>
+                            <td>ɒ ɑ</td>
+                        </tr>
+                    </table>
+                </tr>
+            </table>
 
         </div>
 
