--- a/index.html
+++ b/index.html
@@ -289,72 +289,78 @@
 
             <table style="border: none;">
                 <tr>
-                    <table style="width: 30%">
-                        <tr>
-                            <th colspan="4">Neutral Vowels</th>
-                        </tr>
-                        <tr>
-                            <th></th>
-                            <th>front</th>
-                            <th>central</th>
-                            <th>back</th>
-                        </tr>
-                        <tr>
-                            <th>close</th>
-                            <td colspan="2">i y</td>
-                            <td>u</td>
-                        </tr>
-                        <tr>
-                            <th>open</th>
-                            <td>æ</td>
-                            <td></td>
-                            <td>ɒ ɑ</td>
-                        </tr>
-                    </table>
-                    <table style="width: 30%">
-                        <tr>
-                            <th colspan="4">Neutral Vowels</th>
-                        </tr>
-                        <tr>
-                            <th></th>
-                            <th>front</th>
-                            <th>central</th>
-                            <th>back</th>
-                        </tr>
-                        <tr>
-                            <th>close</th>
-                            <td colspan="2">i y</td>
-                            <td>u</td>
-                        </tr>
-                        <tr>
-                            <th>open</th>
-                            <td>æ</td>
-                            <td></td>
-                            <td>ɒ ɑ</td>
-                        </tr>
-                    </table>
-                    <table style="width: 30%">
-                        <tr>
-                            <th colspan="4">Neutral Vowels</th>
-                        </tr>
-                        <tr>
-                            <th></th>
-                            <th>front</th>
-                            <th>central</th>
-                            <th>back</th>
-                        </tr>
-                        <tr>
-                            <th>close</th>
-                            <td colspan="2">i y</td>
-                            <td>u</td>
-                        </tr>
-                        <tr>
-                            <th>open</th>
-                            <td>æ</td>
-                            <td></td>
-                            <td>ɒ ɑ</td>
-                        </tr>
-                    </table>
+                    <td style="background-color: antiquewhite; border: none;">
+                        <table style="width: 40%">
+                            <tr>
+                                <th colspan="4">Neutral Vowels</th>
+                            </tr>
+                            <tr>
+                                <th></th>
+                                <th>front</th>
+                                <th>central</th>
+                                <th>back</th>
+                            </tr>
+                            <tr>
+                                <th>close</th>
+                                <td colspan="2">i y</td>
+                                <td>u</td>
+                            </tr>
+                            <tr>
+                                <th>open</th>
+                                <td>æ</td>
+                                <td></td>
+                                <td>ɒ (o) ɑ (a)</td>
+                            </tr>
+                        </table>
+                    </td>
+                    <td style="background-color: antiquewhite; border: none;">
+                        <table style="width: 40%">
+                            <tr>
+                                <th colspan="4">Neutral Vowels</th>
+                            </tr>
+                            <tr>
+                                <th></th>
+                                <th>front</th>
+                                <th>central</th>
+                                <th>back</th>
+                            </tr>
+                            <tr>
+                                <th>close</th>
+                                <td colspan="2">i y</td>
+                                <td>u</td>
+                            </tr>
+                            <tr>
+                                <th>open</th>
+                                <td>æ</td>
+                                <td></td>
+                                <td>ɒ (o) ɑ (a)</td>
+                            </tr>
+                        </table>
+                    </td>
+                    <td style="background-color: antiquewhite; border: none;">
+                        <table style="width: 40%">
+                            <tr>
+                                <th colspan="4">Neutral Vowels</th>
+                            </tr>
+                            <tr>
+                                <th></th>
+                                <th>front</th>
+                                <th>central</th>
+                                <th>back</th>
+                            </tr>
+                            <tr>
+                                <th>close</th>
+                                <td colspan="2">i y</td>
+                                <td>u</td>
+                            </tr>
+                            <tr>
+                                <th>open</th>
+                                <td>æ</td>
+                                <td></td>
+                                <td>ɒ (o) ɑ (a)</td>
+                            </tr>
+                        </table>
+                    </td>
                 </tr>
             </table>
 
