--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
             </p>
 
             <table style="border: none;">
-                <tr>
+                <tr style="width: 75%">
                     <td style="background-color: antiquewhite; border: none;">
                         <table style="width: 40%">
                             <tr>
