--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
             border-collapse: collapse;
         }
 
+        th, td {
+            padding: 5px;
+        }
+
         th {
             background-color: bisque;
         }
