--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
            
             <h3>
                 <strong>
-                        Follicle Chronicles #2
+                    Follicle Chronicles #2
                 </strong>
             </h3>
 
@@ -292,9 +292,9 @@
             </p>
 
             <table style="border: none;">
-                <tr style="width: 75%">
+                <tr>
                     <td style="background-color: antiquewhite; border: none;">
-                        <table style="width: 40%">
+                        <table>
                             <tr>
                                 <th colspan="4">Neutral Vowels</th>
                             </tr>
@@ -318,7 +318,7 @@
                         </table>
                     </td>
                     <td style="background-color: antiquewhite; border: none;">
-                        <table style="width: 40%">
+                        <table>
                             <tr>
                                 <th colspan="4">Neutral Vowels</th>
                             </tr>
@@ -342,7 +342,7 @@
                         </table>
                     </td>
                     <td style="background-color: antiquewhite; border: none;">
-                        <table style="width: 40%">
+                        <table>
                             <tr>
                                 <th colspan="4">Neutral Vowels</th>
                             </tr>
