--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             border: 3px, solid rgb(185, 75, 75);
             font-size: 17pt;
             border-collapse: collapse;
+            white-space: nowrap;
         }
 
         th, td {
@@ -320,48 +321,43 @@
                     <td style="background-color: antiquewhite; border: none;">
                         <table>
                             <tr>
-                                <th colspan="4">Neutral Vowels</th>
+                                <th colspan="3">Nasal Vowels</th>
                             </tr>
                             <tr>
                                 <th></th>
                                 <th>front</th>
-                                <th>central</th>
                                 <th>back</th>
                             </tr>
                             <tr>
                                 <th>close</th>
-                                <td colspan="2">i y</td>
-                                <td>u</td>
+                                <td></td>
+                                <td>ũ</td>
                             </tr>
                             <tr>
                                 <th>open</th>
-                                <td>æ</td>
-                                <td></td>
-                                <td>ɒ (o) ɑ (a)</td>
+                                <td>æ̃ </td>
+                                <td>ɒ̃ (õ) ɑ̃ (ã)</td>
                             </tr>
                         </table>
                     </td>
                     <td style="background-color: antiquewhite; border: none;">
                         <table>
                             <tr>
-                                <th colspan="4">Neutral Vowels</th>
+                                <th colspan="3">Screamed Vowels</th>
                             </tr>
                             <tr>
                                 <th></th>
                                 <th>front</th>
                                 <th>central</th>
-                                <th>back</th>
                             </tr>
                             <tr>
                                 <th>close</th>
-                                <td colspan="2">i y</td>
-                                <td>u</td>
+                                <td colspan="2">í ý</td>
                             </tr>
                             <tr>
                                 <th>open</th>
-                                <td>æ</td>
+                                <td>ǽ</td>
                                 <td></td>
-                                <td>ɒ (o) ɑ (a)</td>
                             </tr>
                         </table>
                     </td>
